@@ -57,7 +57,7 @@ namespace DAnCE
                                                       result);
         DANCE_ERROR (DANCE_LOG_NONFATAL_ERROR,
                      (LM_ERROR, DLINFO
-                      ACE_TEXT ("Best_Effort::post_install - ")
+                      ACE_TEXT ("Best_Effort::post_connect - ")
                       ACE_TEXT ("Received exception while establishing connection ")
                       ACE_TEXT ("<%C>:<%C>\n"),
                       plan.connection[connection].name.in (),
@@ -77,7 +77,7 @@ namespace DAnCE
                                                       result);
         DANCE_ERROR (DANCE_LOG_NONFATAL_ERROR,
                      (LM_ERROR, DLINFO
-                      ACE_TEXT ("Best_Effort::post_install - ")
+                      ACE_TEXT ("Best_Effort::post_configured - ")
                       ACE_TEXT ("Received exception while completing configuration of ")
                       ACE_TEXT ("instance <%C>:<%C>\n"),
                       plan.instance[index].name.in (),
@@ -98,7 +98,7 @@ namespace DAnCE
                                                       result);
         DANCE_ERROR (DANCE_LOG_NONFATAL_ERROR,
                      (LM_ERROR, DLINFO
-                      ACE_TEXT ("Best_Effort::post_install - ")
+                      ACE_TEXT ("Best_Effort::post_activate - ")
                       ACE_TEXT ("Received exception while activating instance ")
                       ACE_TEXT ("<%C>:<%C>\n"),
                       plan.instance[index].name.in (),
@@ -119,7 +119,7 @@ namespace DAnCE
                                                       result);
         DANCE_ERROR (DANCE_LOG_NONFATAL_ERROR,
                      (LM_ERROR, DLINFO
-                      ACE_TEXT ("Best_Effort::post_install - ")
+                      ACE_TEXT ("Best_Effort::post_passivate - ")
                       ACE_TEXT ("Received exception while passivating instance ")
                       ACE_TEXT ("<%C>:<%C>\n"),
                       plan.instance[index].name.in (),
@@ -140,7 +140,7 @@ namespace DAnCE
                                                       result);
         DANCE_ERROR (DANCE_LOG_NONFATAL_ERROR,
                      (LM_ERROR, DLINFO
-                      ACE_TEXT ("Best_Effort::post_install - ")
+                      ACE_TEXT ("Best_Effort::post_remove - ")
                       ACE_TEXT ("Received exception while removing instance ")
                       ACE_TEXT ("<%C>:<%C>\n"),
                       plan.instance[index].name.in (),
